work on swagger.json
