# config/swagger.json
@@ -47,6 +47,10 @@
     {
       "name": "Roles",
       "description": "Roles API for all the users"
+    },
+    {
+      "name": "User Filters",
+      "description": "User Filters API"
     }
   ],
   "paths": {
@@ -311,7 +315,12 @@
           "400": {
             "description": "Bad Request"
           }
-        }
+        },
+        "security": [
+          {
+            "bearer": []
+          }
+        ]
       }
     },
     "/users/id/{id}": {
@@ -368,6 +377,9 @@
             }
           },
           "400": {
+            "description": "Bad Request"
+          },
+          "404": {
             "description": "User not found.",
             "content": {
               "application/json": {
@@ -399,15 +411,6 @@
                 }
               }
             }
-          },
-          "401": {
-            "description": "Unauthorized"
-          },
-          "403": {
-            "description": "Forbidden"
-          },
-          "404": {
-            "description": "Not Found"
           }
         },
         "security": [
@@ -565,12 +568,6 @@
                 }
               }
             }
-          },
-          "401": {
-            "description": "Unauthorized"
-          },
-          "403": {
-            "description": "Forbidden"
           }
         },
         "security": [
@@ -583,17 +580,82 @@
     "/users/signUp": {
       "post": {
         "tags": [
-          "Users"
+          "Users Actions"
         ],
         "summary": "Sign up",
         "description": "API to sign up",
         "parameters": [],
         "responses": {
-          "201": {
-            "description": "Created"
+          "200": {
+            "description": "User successfully created."
           },
           "400": {
-            "description": "Bad Request"
+            "description": "01 Missing info Error. | 02 First and last name missing | 03 Validation Error | 04 Unique constraint Error | 05 Foreign Key Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "01-message": {
+                      "type": "string",
+                      "example": "Content can not be empty!"
+                    },
+                    "02-message": {
+                      "type": "string",
+                      "example": "First and last name missing"
+                    },
+                    "03-message": {
+                      "type": "string",
+                      "example": "Validation Error"
+                    },
+                    "04-message": {
+                      "type": "string",
+                      "example": "Unique constraint Error"
+                    },
+                    "05-message": {
+                      "type": "string",
+                      "example": "Foreign Key Error"
+                    }
+                  },
+                  "xml": {
+                    "name": "main"
+                  }
+                }
+              },
+              "application/xml": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "01-message": {
+                      "type": "string",
+                      "example": "Content can not be empty!"
+                    },
+                    "02-message": {
+                      "type": "string",
+                      "example": "First and last name missing"
+                    },
+                    "03-message": {
+                      "type": "string",
+                      "example": "Validation Error"
+                    },
+                    "04-message": {
+                      "type": "string",
+                      "example": "Unique constraint Error"
+                    },
+                    "05-message": {
+                      "type": "string",
+                      "example": "Foreign Key Error"
+                    }
+                  },
+                  "xml": {
+                    "name": "main"
+                  }
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         },
         "requestBody": {
@@ -618,7 +680,7 @@
     "/users/search/atributos": {
       "get": {
         "tags": [
-          "Users"
+          "User Filters"
         ],
         "summary": "Search user by attributes",
         "description": "API to search user based on attributes",
@@ -690,7 +752,7 @@
     "/users/search/rol/{rol}": {
       "get": {
         "tags": [
-          "Users"
+          "User Filters"
         ],
         "description": "",
         "parameters": [
@@ -709,12 +771,6 @@
           },
           "400": {
             "description": "Bad Request"
-          },
-          "401": {
-            "description": "Unauthorized"
-          },
-          "403": {
-            "description": "Forbidden"
           }
         }
       }
@@ -722,34 +778,65 @@
     "/users/logIn": {
       "post": {
         "tags": [
-          "Users"
+          "Users Actions"
         ],
-        "description": "",
+        "summary": "Log in",
+        "description": "API to log in",
         "parameters": [],
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "User successfully logged in."
           },
           "400": {
             "description": "Bad Request"
           },
           "404": {
-            "description": "Not Found"
+            "description": "User not found.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "error": {
+                      "type": "string",
+                      "example": "User not found."
+                    }
+                  },
+                  "xml": {
+                    "name": "main"
+                  }
+                }
+              },
+              "application/xml": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "error": {
+                      "type": "string",
+                      "example": "User not found."
+                    }
+                  },
+                  "xml": {
+                    "name": "main"
+                  }
+                }
+              }
+            }
           }
         },
         "requestBody": {
+          "in": "body",
+          "required": true,
+          "type": "object",
           "content": {
             "application/json": {
               "schema": {
-                "type": "object",
-                "properties": {
-                  "username": {
-                    "example": "any"
-                  },
-                  "userpass": {
-                    "example": "any"
-                  }
-                }
+                "$ref": "#/components/schemas/Login"
+              }
+            },
+            "application/xml": {
+              "schema": {
+                "$ref": "#/components/schemas/Login"
               }
             }
           }
@@ -1580,6 +1667,10 @@
             "type": "string",
             "example": "kingofthenorth"
           },
+          "userpass": {
+            "type": "string",
+            "example": "123456"
+          },
           "firstname": {
             "type": "string",
             "example": "jon"
@@ -1602,7 +1693,7 @@
           },
           "rol": {
             "type": "string",
-            "example": "1"
+            "example": "2"
           }
         },
         "xml": {
@@ -1667,6 +1758,22 @@
         },
         "xml": {
           "name": "Category"
+        }
+      },
+      "Login": {
+        "type": "object",
+        "properties": {
+          "username": {
+            "type": "string",
+            "example": "kingofthenorth"
+          },
+          "userpass": {
+            "type": "string",
+            "example": "12345"
+          }
+        },
+        "xml": {
+          "name": "Login"
         }
       }
     },
